--- a/NBUY_REF/Views/Shared/_Navbar.cshtml
+++ b/NBUY_REF/Views/Shared/_Navbar.cshtml
@@ -59,13 +59,13 @@
     <div id="logo">
 
         <a href="@Url.Action("Index", "Home")">
-            Beyzanur Kılınç Blog
+            BEYZANUR KILINÇ
             <span class="sr-only">(current)</span>
         </a>
 
         <div class="navbar-right">
 
-            <a href="@Url.Action("About", "Home")">Hakkında</a>
+            <a href="@Url.Action("About", "Home")">Hakkında</a> &nbsp;
             <a href="@Url.Action("Contact", "Home")">İletişim</a>
 
         </div>        
@@ -73,6 +73,8 @@
 </div>
 
 <div id="hero"></div>
+
+
 
 
 
